...
    <string name="tab_text_1">Transactions</string>
    <string name="tab_text_2">Cards</string>
    <string name="tab_text_3">Details</string>
    <string name="name">Name</string>
    <string name="settings">Change password</string>
    <string name="about">About</string>
    <string name="editprof">Edit profile</string>
    <!-- for edit -->
    <string name="fNameEdit"></string>
    <string name="sNameEdit"></string>
    <string name="emailEdit"></string>
    <string name="cnpEdit"></string>
    <string name="userName"></string>
...
